ossm-tcp-egress/case-3-TLS/bookinfo/dr-my-nginx.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: default-egress
  namespace: bookinfo
spec:
  exportTo:
  - .
  host: default-egress.istio-system.svc.cluster.local
  subsets:
  - name: v2-mysql
  - name: v2-mysql-nginx
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
        sni: my-nginx.external
