ossm-tcp-egress/case-3-TLS/bookinfo/vs-my-nginx.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: my-nginx
  namespace: bookinfo
spec:
  exportTo:
  - .
  gateways:
  - mesh
  hosts:
  - my-nginx.external
  http:
  - match:
    - authority:
        exact: 'my-nginx.external'
    route:
    - destination:
        host: default-egress.istio-system.svc.cluster.local
        port:
          number: 443
        subset: v2-nginx
      weight: 100
